<resources>
    <string name="app_name">Kazi Manager</string>
    <string name="app_version">Version 1.2.0</string>
    <string name="copyright">\u00A9 2020 Spiking Acacia</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_verify_password">Verify Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <!-- TODO: Remove or change this placeholder text -->

    <!-- Strings related to Settings -->

    <!-- Example General settings -->

    <!-- Example settings for Data & Sync -->

    <!-- Example settings for Notifications -->

    <!-- my strings-->
    <string name="forgotyourpassword">Forgot your password?</string>

    <string name="title_activity_cmenu">CMenuActivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_header_location">Location</string>
    <string name="pref_header_features">Features</string>
    <string name="pref_header_feedback">Feedback</string>
    <string name="pref_header_help">Help</string>
    <string name="pref_header_account">Account</string>


    <!-- Example settings for Data & Sync -->

    <!-- Example settings for Notifications -->

    <string name="pref_ringtone_silent">Silent</string>

    <string name="title_activity_maps">Map</string>
    <string name="title_activity_crequirements">CRequirementsActivity</string>
    <string name="title_activity_ceproperties">CEPropertiesA</string>
    <string name="title_activity_ccpersonnel">CCPersonnelA</string>
    <string name="title_message_list">Messages</string>
    <string name="title_message_detail">Message Detail</string>
    <string name="title_activity_cttasks">CTTasksA</string>
    <string name="action_logout">Logout</string>
    <string name="location_permission_denied">This app requires location permission. Please try again and grant access to use the location.</string>
    <string name="permission_required_toast">Location permission is required for this app.</string>

    <!-- my strings-->
    <!-- employee's help page-->

    <!-- boss's help page-->
    <string name="u_b_1">Profile</string>
    <string name="u_b_1_a">\u2460 Define the company\'s names.</string>
    <string name="u_b_1_b">\u279e Settings \u279e General \u279e Company Names</string>
    <string name="u_b_2_a">\u2461 Upload the company\'s profile picture</string>
    <string name="u_b_2_b">\u279e Settings \u279e General \u279e </string>
    <string name="u_b_3_a">\u2462 Set the company\'s location</string>
    <string name="u_b_3_b">\u279e Settings \u279e Location \u279e Country</string>
    <string name="u_b_3_c">\u279e Settings \u279e Location \u279e Change Location</string>

    <string name="u_b_2">Skills</string>
    <string name="u_b_4_a">\u2460 Create the positions eg Welder, Driver, Doctor etc.</string>
    <string name="u_b_4_b">\u279e Requirements \u279e Skills \u279e Positions \u279e Options(upper right corner) \u279e add</string>
    <string name="u_b_5_a">\u2461 Create all the qualifications required for the positions eg First aid training, computer skills etc.</string>
    <string name="u_b_5_b">\u279e Requirements \u279e Skills \u279e Qualifications \u279e Options(upper right corner) \u279e add</string>
    <string name="u_b_6_a">\u2462 Set the qualifications required for each position</string>
    <string name="u_b_6_b">\u279e Requirements \u279e Skills \u279e Position Qualifications \u279e </string>
    <string name="u_b_7_a">\u2463 Define the notification periods for each qualification. This is done so that you can be alerted when the user\'s certificates or licenses have expired
    or near expiry</string>
    <string name="u_b_7_b">\u279e Requirements \u279e Skills \u279e Notifications</string>

    <string name="u_b_3">Equipments</string>
    <string name="u_b_8_a">Follow the procedure shown above but now for the equipments</string>

    <string name="u_b_end">\u20de That\'s it, your account is now set, all that remains is for your employees to fill in their information using the Spiky Kazi Employee app</string>
    <!--subscriptions-->
    <string name="content_description_app_loading_image">App loading image</string>
    <string name="button_purchase">Purchase</string>
    <string name="error_no_skus">We didn\'t find any products to display&#8230; Check your internet
        connection.</string>
    <string name="error_billing_unavailable">Billing unavailable. Make sure your Google Play app
        is setup correctly</string>
    <string name="error_billing_default">Billing unavailable. Please check your device.</string>
    <string name="header_inapp">One-time deals</string>
    <string name="header_subscriptions">Subscriptions</string>
    <string name="button_buy">Buy</string>
    <string name="button_own">Own</string>
    <string name="button_change">Change</string>
    <string name="alert_already_purchased">Item is already purchased</string>
    <!--general -->
    <string name="login_welcome">Manage your \n Company\'s Compliance</string>
    <string name="register">Register</string>
    <string name="about">About</string>
</resources>
