<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <Preference
        android:fragment="com.spikingacacia.kazi.CSettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info"
        android:title="@string/pref_header_general" />

    <Preference
        android:fragment="com.spikingacacia.kazi.CSettingsActivity$LocationPreferenceFragment"
        android:icon="@drawable/ic_location"
        android:title="@string/pref_header_location"
        app:allowDividerAbove="true"/>

    <!--<Preference
        android:fragment="com.spikingacacia.kazi.CSettingsActivity$PrivilegesPreferenceFragment"
        android:icon="@drawable/ic_privileges"
        android:title="@string/pref_header_privileges"
        app:allowDividerAbove="true"/>-->
    <Preference
        android:fragment="com.spikingacacia.kazi.CSettingsActivity$FeaturesPreferenceFragment"
        android:icon="@drawable/ic_features"
        android:title="@string/pref_header_features"
        app:allowDividerAbove="true"/>
    <Preference
        android:fragment="com.spikingacacia.kazi.CSettingsActivity$FeedBackPreferenceFragment"
        android:icon="@drawable/ic_feedback"
        android:title="@string/pref_header_feedback"
        app:allowDividerAbove="true"/>
    <Preference
        android:fragment="com.spikingacacia.kazi.CSettingsActivity$HelpPreferenceFragment"
        android:icon="@drawable/ic_help"
        android:title="@string/pref_header_help"
        app:allowDividerAbove="true"/>
    <Preference
        android:fragment="com.spikingacacia.kazi.CSettingsActivity$AccountPreferenceFragment"
        android:icon="@drawable/ic_account"
        android:title="@string/pref_header_account"
        app:allowDividerAbove="true"/>
    <Preference
        android:fragment="com.spikingacacia.kazi.CSettingsActivity$AboutPreferenceFragment"
        android:icon="@drawable/ic_about"
        android:title="@string/about"
        app:allowDividerAbove="true"/>

</PreferenceScreen>
